Release history for {{ $dist->name }}:

{{$NEXT}}

v0.1.1    2025-08-16 12:19:42+01:00 Europe/London
  [Documentation]
  - README is now generated by Dist::Zilla::Plugin::UsefulReadme.

  - Improved SYNOPSIS.

  - Removed separate INSTALL file.

  [Tests]
  - Updated author tests.

  - Moved author tests into xt.

  [Toolchain]
  - Improved Dist::Zilla config.

v0.1.0    2025-07-24 23:53:39+01:00 Europe/London
  - Initial release.